# ATTPCFrontEnd

src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: attpcfe_app.cpp  attpcgui_app.cpp
src/lib/: CMakeLists.txt
src/lib/include/: HDF5Wrapper.hpp  data_handler.hpp  event.hpp  hdf5_wrapper.hpp  hit.hpp  hit_list.hpp  notification_queue.hpp  pad.hpp  pattern_event.hpp  raw_event.hpp  stack.hpp  state.hpp  task_system.hpp  track.hpp
src/lib/include/core/: DataHandler.hpp  DataHandler.inl  Event.hpp  Hdf5Wrapper.hpp  Hit.hpp  HitList.hpp  LogLevel.hpp  LogMsg.hpp  LogMsg.inl  LogSink.hpp  Logger.hpp  NotificationQueue.hpp  Pad.hpp  Padplane.hpp  PatternEvent.hpp  RawEvent.hpp  RawTrack.hpp  ReconstructionState.hpp  Stack.hpp  Stack.inl  State.hpp  TaskSystem.hpp  TaskSystem.inl  Tpc.hpp  Track.hpp  TrackEvent.hpp  data_handler.hpp  event.hpp  hit.hpp  hit_list.hpp  notification_queue.hpp  pad.hpp  pattern_event.hpp  raw_event.hpp  raw_track.hpp  stack.hpp  state.hpp  task_system.hpp  track_event.hpp
src/lib/include/gui/: ChartView.hpp  Display.hpp  DisplayFunctions.hpp  GuiChartView.hpp  GuiDisplay.hpp  GuiMainWindow.hpp  GuiState.hpp  MainWindow.hpp  OpenGLView.hpp  PadplaneDock.hpp  ReconstructionDock.hpp  ReconstructionDockState.hpp  ReconstructionDockTasks.hpp  ReconstructionTasks.hpp  TpcDock.hpp
src/lib/include/reco/: BaselineCorrection.hpp  PSATask.hpp  PadPlane.hpp  Padplane.hpp  PatRecTask.hpp  Tpc.hpp  TrackRecTask.hpp
src/lib/include/utils/: Active.hpp  LogMsg.hpp  LogMsg.inl  LogSink.hpp  LogSink.inl  Logger.hpp  SimpleNotificationQueue.hpp  SimpleNotificationQueue.inl  SimpleQueue.hpp  SimpleQueue.inl  Singleton.hpp  Singleton.inl  TaskSystem.hpp  TaskSystem.inl  UnitTest.hpp  UnitTest.inl  UnitTestRegister.hpp  UnitTestRegister.inl  UnitTestable.hpp  UnitTestable.inl
src/lib/src/: HDF5Wrapper.cpp  event.cpp  hdf5_wrapper.cpp  hit_list.cpp  notification_queue.cpp  pad.cpp  raw_event.cpp  state.cpp  task_system.cpp
src/lib/src/core/: Event.cpp  Hdf5Wrapper.cpp  Hit.cpp  HitList.cpp  LogLevel.cpp  LogMsg.cpp  LogSink.cpp  Logger.cpp  NotificationQueue.cpp  Pad.cpp  Padplane.cpp  PatternEvent.cpp  RawEvent.cpp  RawTrack.cpp  ReconstructionState.cpp  State.cpp  TaskSystem.cpp  Tpc.cpp  Track.cpp  TrackEvent.cpp  event.cpp  hit.cpp  hit_list.cpp  notification_queue.cpp  pattern_event.cpp  raw_event.cpp  raw_track.cpp  state.cpp  track.cpp  track_event.cpp
src/lib/src/gui/: ChartView.cpp  Display.cpp  DisplayFunctions.cpp  GuiChartView.cpp  GuiDisplay.cpp  GuiMainWindow.cpp  GuiState.cpp  MainWindow.cpp  OpenGLView.cpp  PadplaneDock.cpp  ReconstructionDock.cpp  ReconstructionDockState.cpp  ReconstructionDockTasks.cpp  ReconstructionTasks.cpp  TpcDock.cpp
src/lib/src/reco/: BaselineCorrection.cpp  PSATask.cpp  PadPlane.cpp  Padplane.cpp  PatRecTask.cpp  Tpc.cpp  TrackRecTask.cpp
src/lib/src/utils/: Active.cpp  LogLevel.cpp  LogMsg.cpp  LogSink.cpp  Logger.cpp  NotificationQueue.cpp  Singleton.cpp  TaskSystem.cpp  UnitTest.cpp  UnitTestRegister.cpp
src/lib/test/: Hdf5WrapperTest.cpp  LoggerTest.cpp  TaskSystemTest.cpp  TestHDF5Wrapper.cpp  UnitTestRegisterTest.cpp  hdf5_wrapper_test.cpp  task_system_test.cpp
